Removed unsafe and deprecated invokations.